[project]
name = "dungeondice-matrix"
version = "0.1.0"
authors = [
  { name="jwizzle", email="info@hossel.net" },
]
description = "Tools to roll some virtual dice"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matrix-python>=1.0.4a0",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.1",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "GPL-3.0-or-later"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/jwizzle/dungeondice-matrix"
Issues = "https://github.com/jwizzle/dungeondice-matrix/issues"
